# munibot

./: .gitignore  LICENSE.txt  README.md  conftest.py  dev-requirements.txt  munibot.sample.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-pypi.yml  test.yml
data/: munibot.sqlite  munis_esp.sqlite
munibot/: cli.py  config.py  image.py  mastodon.py  munibot.py  tweet.py
munibot/profiles/: __init__.py  base.py  cat.py  es.py  us.py
munibot/tests/: fixtures.py  munibot.test.ini  test.geojson  test.tiff  test_commands.py  test_config.py  test_image.py  test_post.py  test_tweet.py
src/munibot/: image.py  mastodon.py  munibot.py
src/munibot/profiles/: cat.py  es.py  fr.py  us.py
src/munibot/tests/: test_commands.py  test_config.py  test_image.py
